--- a/WebContent/dashboard.html
+++ b/WebContent/dashboard.html
@@ -90,10 +90,10 @@
 			<div class="sidebar-scroll">
 				<nav>
 					<ul class="nav">
-						<li><a href="dashboard.jsp" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-						<li><a href="trade.jsp" class=""><i class="lnr lnr-file-empty"></i> <span>Generate Trades</span></i></a></li>
+						<li><a href="dashboard.html" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
+						<li><a href="trade.html" class=""><i class="lnr lnr-file-empty"></i> <span>Generate Trades</span></i></a></li>
 						<li><a href="view-trades.html" class=""><i class="lnr lnr-dice"></i> <span>View Trades</span></a></li>
-						<li><a href="page-login.html" class=""><i class="lnr lnr-cog"></i> <span>Logout</span></a></li>
+						<li><a href="index.html" class=""><i class="lnr lnr-cog"></i> <span>Logout</span></a></li>
 						<!--li><a href="elements.html" class=""><i class="lnr lnr-code"></i> <span>Elements</span></a></li>
 						<li><a href="charts.html" class=""><i class="lnr lnr-chart-bars"></i> <span>Charts</span></a></li>
 						<li><a href="panels.html" class=""><i class="lnr lnr-cog"></i> <span>Panels</span></a></li>
