Remove settlement date

--- a/WebContent/dashboard.html
+++ b/WebContent/dashboard.html
@@ -75,7 +75,7 @@
 			<!-- MAIN CONTENT -->
 			<div class="main-content">
 				<div class="container-fluid">
-					<h3 class="page-title">Bonds Traded per country</h3>
+					<h3 class="page-title">Bonds per country</h3>
 					<div class="row">
 						<div class="col-md-12">
 							<div class="panel">
@@ -156,7 +156,7 @@
 			labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
 			//Put values here
 			series: [
-				[200, 380, 900, 320, 410, 450, 570, 400, 555, 620, 750, 900],
+				[1,2,3,4,5,6,7,8,9,10,11,12],
 			]
 		};
 		options = {
