--- a/WebContent/dashboard.html
+++ b/WebContent/dashboard.html
@@ -153,10 +153,10 @@
 		var options;
 		var data = {
 			//Put names of countries here
-			labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+			labels: ['Germany', 'Hongkong', 'India', 'Japan', 'New Zealand', 'Thailand', 'United Kingdom', 'United States'],
 			//Put values here
 			series: [
-				[1,2,3,4,5,6,7,8,9,10,11,12],
+				[30, 27, 38, 26, 41, 18, 37, 33],
 			]
 		};
 		options = {
